feat: Complete tablet & desktop versions

--- a/layout.html
+++ b/layout.html
@@ -28,8 +28,8 @@
   <body>
     <ul class="comment">
       <li>
-        Надеюсь, Вам не была нужна pixel-perfect верстка.<br />
-        Потому что я подкорректировал некоторые размеры под
+        Надеюсь, Вам не была нужна pixel-perfect верстка, так как там беда с паддингами и гэпами<br />
+        Поэтому я подкорректировал некоторые размеры под
         <span class="comment__link">
           <a
             href="https://habr.com/ru/companies/productivity_inside/articles/319700/"
