fix: Correct title

--- a/layout.html
+++ b/layout.html
@@ -23,7 +23,7 @@
       rel="stylesheet"
       href="layout.css"
     />
-    <title>Checlist Layout</title>
+    <title>Checklist Layout</title>
   </head>
   <body>
     <ul class="comment">
